2006-09-07 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* doc/sdccman.lyx: Some re-formating plus example on using
	  #pragma preproc_asm +/-

2006-09-07 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added SDCDB executables in a separate
	  section

2006-09-06 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: fixed Error: unterminated string parsing
	  line at sdcc.nsi:153
	* sdcc/debugger/mcs51/simi.c: argsToCmdLine() fixes

2006-09-05 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure: support for winsock2
	* debugger/mcs51/break.h, debugger/mcs51/cmd.c,
	  debugger/mcs51/cmd.h, debugger/mcs51/sdcdb.c,
	  debugger/mcs51/sdcdb.h, debugger/mcs51/simi.c,
	  debugger/mcs51/simi.h, debugger/mcs51/symtab.c,
	  debugger/mcs51/symtab.h: sdcdb WIN32 native port

2006-09-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCopt.c (cnvToFcall): fixed bug 1551947 by updating OP_USES
	  and OP_DEFS
	* support/regression/tests/bug1551947.c: new, added
	* src/SDCCsymt.h: strings are char* not byte*

2006-09-05 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libdev/pic18f4550.c,
	  device/include/pic16/pic18f4550.h: added PORTD/TRISD
	    declarations/definitions from patch #1520949

2006-09-05 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genPackBits): fix assignment to 8-bit,
	  byte-aligned bitfields, fixes #1539278

2006-09-05 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genReceive): skip unreferenced arguments,
	  fixes #1544120

2006-09-04 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: move ucSim executables to a separate section
	* support/scripts/sdcc_cygwin_mingw32: don't disable ucsim,
	  -mno-cygwin is a part of the compiler name
	* support/scripts/sdcc_mingw32: don't disable ucsim

2006-09-03 Borut Razem <borut.razem AT siol.net>

	* sdcc.spec: corrected for 2.6.0. Thanks to Christer Weinigel.